[gd_scene load_steps=12 format=3 uid="uid://be4lvn5mnwys8"]

[ext_resource type="Script" uid="uid://b1oo0bbumrt4p" path="res://scripts/ui/game_over_panel.gd" id="1_pari6"]
[ext_resource type="Texture2D" uid="uid://b2soeeuiywi1c" path="res://assets/sprites/UI/background_panel_1.png" id="2_a4ako"]
[ext_resource type="Texture2D" uid="uid://b0jwg2k4ghf0a" path="res://assets/sprites/UI/Animals_UI4.png" id="4_qbr8n"]
[ext_resource type="Theme" uid="uid://dbivxp4ikj2iy" path="res://resources/main_menu_style.tres" id="8_a3ist"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_07u0o"]
texture = ExtResource("2_a4ako")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_xsydr"]
texture = ExtResource("2_a4ako")

[sub_resource type="StyleBoxLine" id="StyleBoxLine_4dja5"]

[sub_resource type="StyleBoxLine" id="StyleBoxLine_yt5if"]
thickness = 0

[sub_resource type="Animation" id="Animation_rw4rw"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_t6wor"]
resource_name = "fade_in"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_rw4rw"]
_data = {
&"RESET": SubResource("Animation_rw4rw"),
&"fade_in": SubResource("Animation_t6wor")
}

[node name="GameOver" type="MarginContainer"]
z_index = 50
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 25
theme_override_constants/margin_top = 25
theme_override_constants/margin_right = 25
theme_override_constants/margin_bottom = 25
script = ExtResource("1_pari6")

[node name="BettingPanel" type="Panel" parent="."]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="BettingPanel"]
layout_mode = 2
offset_right = 590.0
offset_bottom = 310.0
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 15

[node name="root" type="HBoxContainer" parent="BettingPanel/MarginContainer"]
layout_mode = 2

[node name="LeftPanel" type="Panel" parent="BettingPanel/MarginContainer/root"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/panel = SubResource("StyleBoxTexture_07u0o")

[node name="MarginContainer" type="MarginContainer" parent="BettingPanel/MarginContainer/root/LeftPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 30
theme_override_constants/margin_top = 30
theme_override_constants/margin_right = 30
theme_override_constants/margin_bottom = 20

[node name="left" type="VBoxContainer" parent="BettingPanel/MarginContainer/root/LeftPanel/MarginContainer"]
layout_mode = 2

[node name="AnimalsResultLabel" type="RichTextLabel" parent="BettingPanel/MarginContainer/root/LeftPanel/MarginContainer/left"]
layout_mode = 2
bbcode_enabled = true
text = "[color=\"green\"]Saved animals:
- Kakapo
- Hippo
[/color]
[color=\"red\"]Killed animals:
- Hippo
- Kakapo
[/color]
"
fit_content = true
horizontal_alignment = 1
vertical_alignment = 1

[node name="RightPanel" type="Panel" parent="BettingPanel/MarginContainer/root"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/panel = SubResource("StyleBoxTexture_xsydr")

[node name="MarginContainer3" type="MarginContainer" parent="BettingPanel/MarginContainer/root/RightPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 0
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="SadTextureRect" type="TextureRect" parent="BettingPanel/MarginContainer/root/RightPanel/MarginContainer3"]
custom_minimum_size = Vector2(180, 180)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("4_qbr8n")
stretch_mode = 3

[node name="MarginContainer" type="MarginContainer" parent="BettingPanel/MarginContainer/root/RightPanel/MarginContainer3"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
theme_override_constants/margin_bottom = 40

[node name="Panel" type="Panel" parent="BettingPanel/MarginContainer/root/RightPanel/MarginContainer3/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="ResultLabel" type="RichTextLabel" parent="BettingPanel/MarginContainer/root/RightPanel/MarginContainer3/MarginContainer/Panel"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -79.5
offset_top = -23.0
offset_right = 79.5
grow_horizontal = 2
grow_vertical = 0
bbcode_enabled = true
text = "[color=\"red\"]You lost all your money![/color]"
fit_content = true
horizontal_alignment = 1

[node name="MarginContainer3" type="MarginContainer" parent="BettingPanel/MarginContainer/root/RightPanel/MarginContainer3"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 8
theme_override_constants/margin_left = 0
theme_override_constants/margin_right = 30
theme_override_constants/margin_bottom = 5

[node name="Panel" type="Panel" parent="BettingPanel/MarginContainer/root/RightPanel/MarginContainer3/MarginContainer3"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4
theme_override_styles/panel = SubResource("StyleBoxLine_4dja5")

[node name="MainMenuButton" type="Button" parent="BettingPanel/MarginContainer/root/RightPanel/MarginContainer3/MarginContainer3/Panel"]
custom_minimum_size = Vector2(100, 40)
layout_mode = 1
anchors_preset = 13
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -18.5
offset_right = 18.5
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("8_a3ist")
text = "Main Menu"

[node name="MarginContainer2" type="MarginContainer" parent="BettingPanel/MarginContainer/root/RightPanel/MarginContainer3"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
theme_override_constants/margin_top = 25

[node name="VBoxContainer" type="VBoxContainer" parent="BettingPanel/MarginContainer/root/RightPanel/MarginContainer3/MarginContainer2"]
layout_mode = 2

[node name="GameOverLabel" type="Label" parent="BettingPanel/MarginContainer/root/RightPanel/MarginContainer3/MarginContainer2/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 32
theme_override_styles/normal = SubResource("StyleBoxLine_yt5if")
text = "GAME OVER!"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_rw4rw")
}

[connection signal="pressed" from="BettingPanel/MarginContainer/root/RightPanel/MarginContainer3/MarginContainer3/Panel/MainMenuButton" to="." method="_on_main_menu_button_pressed"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
